--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
         "@vue/compiler-sfc": "^3.2.31",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
+        "deepmerge": "^4.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
+        "sass": "^1.51.0",
+        "sass-loader": "^12.6.0",
         "tailwindcss": "^3.0.18",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "vuetify": "^3.0.0-beta.1"
     }
 }
